--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ environment:
   sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
-  dart_console: ^4.0.0
+  dart_console:
+    git: https://github.com/onepub-dev/dart_console
   meta: ^1.8.0
   tint: ^2.0.0
 
